[project]
name = "appointment-booking-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "djangorestframework>=3.16.0",
    "drf-yasg>=1.21.10",
    "pylint~=3.0",
    "python-dotenv>=1.1.1",
]
